--- a/index.html
+++ b/index.html
@@ -3,295 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Policy Calculator</title>
+    <title>Car Parts Store</title>
     <style>
         body {
-            font-family: 'proxima-nova', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            color: #343F57;
+            background-color: #f4f4f4;
         }
 
-        #calculatorApp {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+        }
+
+        nav {
+            background-color: #555;
+            padding: 1em;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 1em;
+            margin-right: 10px;
+        }
+
+        section {
             padding: 20px;
-            width: 85%; /* Set to a percentage for responsiveness */
-            max-width: 500px; /* Set a maximum width */
-            text-align: left;
-            position: relative;
         }
 
-        .logo {
-            width: 80%;
-            max-width: 200px;
-            height: auto;
-            margin-bottom: 20px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        h1 {
-            color: #42AE96;
-            margin-bottom: 20px;
-            font-size: 2em;
-            font-weight: 700;
-            text-align: center;
-        }
-
-        .form-section label {
-            color: #343F57;
-            font-family: 'proxima-nova', sans-serif;
-            margin-bottom: 5px;
-            font-size: 1.2em;
-            display: block;
-        }
-
-        input[type="text"],
-        input[type="number"],
-        input[type="date"] {
-            width: 100%;
-            padding: 12px;
-            box-sizing: border-box;
-            margin-bottom: 15px;
-            border: 1px solid #42AE96;
-            border-radius: 6px;
-            font-size: 1.2em;
-            color: #555;
-        }
-
-        #addToTableButton,
-        #copyTableButton {
-            background-color: #42AE96;
-            border: none;
-            border-radius: 6px;
-            color: #343F57;
-            cursor: pointer;
-            font-family: 'proxima-nova', sans-serif;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 33.75px;
-            padding: 14px 20px;
-            display: block;
-            width: 100%;
-            margin: 0 auto 15px;
-            text-align: center;
-            transition: background-color 0.3s ease;
-        }
-
-        #addToTableButton:hover,
-        #copyTableButton:hover {
-            background-color: #378C7D;
-        }
-
-        #totals h2,
-        #totals h3,
-        table th,
-        table td {
-            color: #343F57;
-            font-family: 'proxima-nova', sans-serif;
-        }
-
-        table {
-            width: 100%;
-            margin-top: 20px;
-            border-collapse: collapse;
-        }
-
-        th, td {
-            padding: 15px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-
-        th {
-            background-color: #42AE96;
+        footer {
+            background-color: #333;
             color: white;
-        }
-
-        .removeButton {
-            background-color: #E74C3C;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 1.2em;
-            transition: background-color 0.3s ease;
-        }
-
-        .removeButton:hover {
-            background-color: #C0392B;
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <div id="calculatorApp">
-        <img src="https://software.connexone.co.uk/images/logo-d2.png" alt="Logo" class="logo">
-        <h1>Policy Calculator</h1>
 
-        <div class="form-section">
-            <label for="policyNumber">Policy Number:</label>
-            <input type="text" id="policyNumber" name="policyNumber" placeholder="Enter policy number" onkeydown="if (event.key === 'Enter') addToTableFromInput()">
+    <header>
+        <h1>Car Parts Store</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Categories</a>
+        <a href="#">Contact</a>
+    </nav>
+
+    <section>
+        <h2>Welcome to our Car Parts Store</h2>
+        <p>Find the best quality car parts for your vehicle.</p>
+
+        <!-- Add your product listings here -->
+        <div>
+            <h3>Product 1</h3>
+            <p>Description of Product 1. Price: $XX.XX</p>
         </div>
 
-        <div class="form-section">
-            <label for="paymentDate">Payment Date:</label>
-            <input type="date" id="paymentDate" name="paymentDate" onkeydown="if (event.key === 'Enter') addToTableFromInput()">
+        <div>
+            <h3>Product 2</h3>
+            <p>Description of Product 2. Price: $XX.XX</p>
         </div>
 
-        <div class="form-section">
-            <label for="policyAmount">Policy Amount (R):</label>
-            <input type="number" id="policyAmount" name="policyAmount" min="0" value="0" oninput="calculateTotal()" onkeydown="if (event.key === 'Enter') addToTableFromInput()">
-        </div>
+        <!-- Add more product listings as needed -->
 
-        <div class="form-section">
-            <label for="months">Months in Arrears:</label>
-            <input type="number" id="months" name="months" min="1" value="1" oninput="calculateTotal()" onkeydown="if (event.key === 'Enter') addToTableFromInput()">
-        </div>
+    </section>
 
-        <button id="addToTableButton" onclick="addToTableFromInput()">Add to Table</button>
+    <footer>
+        <p>&copy; 2023 Car Parts Store. All rights reserved.</p>
+    </footer>
 
-        <div id="totals">
-            <h2>Total Cost: R<span id="totalCost">0</span></h2>
-        </div>
-
-        <table id="data-table">
-            <thead>
-                <tr>
-                    <th>Policy Number</th>
-                    <th>Payment Date</th>
-                    <th>Policy Amount (R)</th>
-                    <th>Months in Arrears</th>
-                    <th>Total Cost (R)</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-            <tfoot>
-                <tr id="totalsRow">
-                    <td>Total</td>
-                    <td></td>
-                    <td id="totalAmount">0</td>
-                    <td id="totalMonths">0</td>
-                    <td id="grandTotal">0</td>
-                    <td></td>
-                </tr>
-            </tfoot>
-        </table>
-
-        <button id="copyTableButton" onclick="copyTable()">Copy Table</button>
-    </div>
-
-    <script>
-        function calculateTotal() {
-            var policyAmount = parseFloat(document.getElementById('policyAmount').value);
-            var monthsInArrears = parseInt(document.getElementById('months').value, 10);
-            
-            var totalCost = policyAmount * monthsInArrears;
-
-            document.getElementById('totalCost').textContent = totalCost.toFixed(2);
-        }
-
-        function isDuplicatePolicyNumber(policyNumber) {
-            var tableBody = document.querySelector('#data-table tbody');
-            for (var i = 0; i < tableBody.rows.length; i++) {
-                var row = tableBody.rows[i];
-                var existingPolicyNumber = row.cells[0].textContent;
-                if (existingPolicyNumber === policyNumber) {
-                    return true;
-                }
-            }
-            return false;
-        }
-
-        function showWarning(message) {
-            alert(message);
-        }
-
-        function addToTable(policyNumber, paymentDate, policyAmount, monthsInArrears, totalCost) {
-            var tableBody = document.querySelector('#data-table tbody');
-            var newRow = tableBody.insertRow();
-
-            newRow.insertCell().textContent = policyNumber;
-            newRow.insertCell().textContent = paymentDate;
-            newRow.insertCell().textContent = policyAmount.toFixed(2);
-            newRow.insertCell().textContent = monthsInArrears;
-            newRow.insertCell().textContent = totalCost.toFixed(2);
-
-            var removeCell = newRow.insertCell();
-            var removeButton = document.createElement('button');
-            removeButton.textContent = 'Remove';
-            removeButton.className = 'removeButton';
-            removeButton.onclick = function () {
-                removeRow(newRow);
-                updateTotals();
-            };
-            removeCell.appendChild(removeButton);
-
-            updateTotals();
-        }
-
-        function updateTotals() {
-            var tableBody = document.querySelector('#data-table tbody');
-            var totalsRow = document.getElementById('totalsRow');
-
-            var totalAmount = 0;
-            totalMonths = 0;
-            var grandTotal = 0;
-
-            for (var i = 0; i < tableBody.rows.length; i++) {
-                var row = tableBody.rows[i];
-                var amount = parseFloat(row.cells[2].textContent);
-                var months = parseInt(row.cells[3].textContent, 10);
-                var total = parseFloat(row.cells[4].textContent);
-
-                totalAmount += amount;
-                totalMonths += months;
-                grandTotal += total;
-            }
-
-            document.getElementById('totalAmount').textContent = totalAmount.toFixed(2);
-            document.getElementById('totalMonths').textContent = totalMonths;
-            document.getElementById('grandTotal').textContent = grandTotal.toFixed(2);
-        }
-
-        function removeRow(row) {
-            var tableBody = document.querySelector('#data-table tbody');
-            tableBody.removeChild(row);
-        }
-
-        function copyTable() {
-            var table = document.getElementById('data-table');
-            var range = document.createRange();
-            range.selectNode(table);
-            window.getSelection().removeAllRanges();
-            window.getSelection().addRange(range);
-            document.execCommand('copy');
-            window.getSelection().removeAllRanges();
-        }
-
-        function addToTableFromInput() {
-            var policyNumber = document.getElementById('policyNumber').value;
-            var paymentDate = document.getElementById('paymentDate').value;
-            var policyAmount = parseFloat(document.getElementById('policyAmount').value);
-            var monthsInArrears = parseInt(document.getElementById('months').value, 10);
-
-            if (!isNaN(policyAmount) && !isNaN(monthsInArrears)) {
-                if (!isDuplicatePolicyNumber(policyNumber)) {
-                    var totalCost = policyAmount * monthsInArrears;
-                    addToTable(policyNumber, paymentDate, policyAmount, monthsInArrears, totalCost);
-                } else {
-                    showWarning('Policy number already exists in the table. Please enter a unique policy number.');
-                }
-            }
-        }
-    </script>
 </body>
 </html>
