--- a/index.html
+++ b/index.html
@@ -3,83 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Parts Store</title>
+    <title>Live Chat</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            box-sizing: border-box;
         }
 
-        header {
-            background-color: #333;
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             color: white;
+            overflow: hidden;
+        }
+
+        .container {
             text-align: center;
-            padding: 1em;
+            position: relative;
+            z-index: 1;
         }
 
-        nav {
-            background-color: #555;
-            padding: 1em;
+        .live-chat-title {
+            font-size: 4rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
+            text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            letter-spacing: 2px;
+            animation: fadeInUp 1s ease-out;
         }
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 1em;
-            margin-right: 10px;
+        .subtitle {
+            font-size: 1.5rem;
+            font-weight: 300;
+            opacity: 0.9;
+            margin-bottom: 3rem;
+            animation: fadeInUp 1s ease-out 0.3s both;
         }
 
-        section {
-            padding: 20px;
+        .chat-indicator {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 15px 25px;
+            border-radius: 50px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            animation: fadeInUp 1s ease-out 0.6s both;
         }
 
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
+        .pulse-dot {
+            width: 12px;
+            height: 12px;
+            background: #4ade80;
+            border-radius: 50%;
+            animation: pulse 2s infinite;
+        }
+
+        .floating-shapes {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .shape {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            animation: float 6s ease-in-out infinite;
+        }
+
+        .shape:nth-child(1) {
+            width: 80px;
+            height: 80px;
+            top: 20%;
+            left: 10%;
+            animation-delay: 0s;
+        }
+
+        .shape:nth-child(2) {
+            width: 120px;
+            height: 120px;
+            top: 60%;
+            right: 10%;
+            animation-delay: 2s;
+        }
+
+        .shape:nth-child(3) {
+            width: 60px;
+            height: 60px;
+            top: 10%;
+            right: 20%;
+            animation-delay: 4s;
+        }
+
+        .shape:nth-child(4) {
+            width: 100px;
+            height: 100px;
+            bottom: 20%;
+            left: 20%;
+            animation-delay: 1s;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+            50% {
+                transform: scale(1.2);
+                opacity: 0.7;
+            }
+        }
+
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0px) rotate(0deg);
+            }
+            50% {
+                transform: translateY(-20px) rotate(180deg);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .live-chat-title {
+                font-size: 2.5rem;
+            }
+            
+            .subtitle {
+                font-size: 1.2rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .live-chat-title {
+                font-size: 2rem;
+            }
+            
+            .subtitle {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="floating-shapes">
+        <div class="shape"></div>
+        <div class="shape"></div>
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
 
-    <header>
-        <h1>Car Parts Store</h1>
-    </header>
-
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Categories</a>
-        <a href="#">Contact</a>
-    </nav>
-
-    <section>
-        <h2>Welcome to our Car Parts Store</h2>
-        <p>Find the best quality car parts for your vehicle.</p>
-
-        <!-- Add your product listings here -->
-        <div>
-            <h3>Product 1</h3>
-            <p>Description of Product 1. Price: $XX.XX</p>
+    <div class="container">
+        <h1 class="live-chat-title">Live Chat</h1>
+        <p class="subtitle">Connect with us instantly</p>
+        <div class="chat-indicator">
+            <div class="pulse-dot"></div>
+            <span>Chat Available</span>
         </div>
+    </div>
 
-        <div>
-            <h3>Product 2</h3>
-            <p>Description of Product 2. Price: $XX.XX</p>
-        </div>
-
-        <!-- Add more product listings as needed -->
-
-    </section>
-
-    <footer>
-        <p>&copy; 2023 Car Parts Store. All rights reserved.</p>
-    </footer>
-
+    <!-- Live Chat Widget -->
+    <script src="https://livechat-shackletonlife.connexone.co.uk/widget?connid=b59df615-f8ea-45f2-b2ab-38354699f812" id="livechat-shackletonlife" data-socket-uri="https://livechat-shackletonlife.connexone.co.uk"></script>
 </body>
 </html>
